--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "recoil": "^0.3.1",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
