--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "mock-api": "json-server --port 3001 --watch test/api/db.json --snapshots test/api/db-snapshot "
   },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-fetch-hook": "^1.8.5",
     "recoil": "^0.3.1",
     "wouter": "^2.7.4"
   },
@@ -15,6 +17,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "json-server": "^0.16.3",
     "less": "^4.1.1",
     "typescript": "^4.3.2",
     "vite": "^2.4.0"
