--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mock-api": "json-server --port 3001 --watch test/api/db.json --snapshots test/api/db-snapshot "
   },
   "dependencies": {
+    "nanoid": "^3.1.23",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-fetch-hook": "^1.8.5",
