--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "mock-api": "json-server --port 3001 --watch test/api/db.json --snapshots test/api/db-snapshot "
+    "mock-api": "json-server --port 3001 --watch test/api/db.json --snapshots test/api/db-snapshot ",
+    "mock-slow-api": "json-server --port 3001 --watch test/api/db.json --snapshots test/api/db-snapshot --delay 4000"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.0",
