--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "wouter": "^2.7.4"
   },
   "devDependencies": {
+    "@types/node": "^16.4.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
