--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@zxing/browser": "0.0.9",
+    "@zxing/library": "^0.18.6",
     "nanoid": "^3.1.23",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
