--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "mock-slow-api": "json-server --port 3001 --watch test/api/db.json --snapshots test/api/db-snapshot --delay 4000"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
+    "@types/date-fns": "^2.6.0",
     "@zxing/browser": "0.0.9",
     "@zxing/library": "^0.18.6",
+    "date-fns": "^2.23.0",
     "nanoid": "^3.1.23",
     "notistack": "^1.0.10",
     "react": "^17.0.0",
