--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/date-fns": "^2.6.0",
     "@zxing/browser": "0.0.9",
     "@zxing/library": "^0.18.6",
+    "ajv": "^8.6.2",
     "date-fns": "^2.23.0",
     "nanoid": "^3.1.23",
     "notistack": "^1.0.10",
