--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/wouter": "^2.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "json-server": "^0.16.3",
     "less": "^4.1.1",
