--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
     "@types/date-fns": "^2.6.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@zxing/browser": "0.0.9",
     "@zxing/library": "^0.18.6",
     "ajv": "^8.6.2",
@@ -25,8 +27,10 @@
     "notistack": "^1.0.6-next.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-virtualized-auto-sizer": "^1.0.6",
     "react-web-share-api": "0.0.2",
     "react-webcam": "^5.2.4",
+    "react-window": "^1.8.6",
     "recoil": "^0.3.1",
     "wouter": "^2.7.4"
   },
